# TX-eye-tracking

./: CMakeLists.txt  README.md  main.cpp
include/: config.hpp  eye_finder.hpp  gaze_tracker.hpp  matrix.hpp  twin_matrixes.hpp  utils.hpp
src/: eye_finder.cpp  gaze_tracker.cpp  main.cpp
